--- a/views/form.html
+++ b/views/form.html
@@ -1,35 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Go-Lang | GET Method</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
+
 <body>
-    <h1>Tambah Data Mahasiswa</h1>
-    
-    <form action="/add" method="POST">
-        <table>
-            <tr>
-                <td><input type="text" placeholder="Nama" name="nama"></td>
-            </tr>
-            <tr>
-                <td><input type="number" placeholder="NIM" name="nim"></td>
-            </tr>
-            <tr>
-                <td><input type="email" placeholder="Email" name="email"></td>
-            </tr>
-            <tr>
-                <td><input type="text" placeholder="Jurusan" name="jurusan"></td>
-            </tr>
-            <tr>
-                <td>
-                    <button type="submit" name="submit">Kirim</button>
-                    <a href="/">Kembali</a>
-                </td>
-            </tr>
-        </table>
-    </form>
+    <div class="container">
+        <div class="text-center mt-5">
+            <h1>Tambah Data Mahasiswa</h1>
+        </div>
+
+        <div class="col-md-6 offset-md-3 mt-5">
+
+            <form action="/add" method="POST">
+                <table>
+                    <div class="mb-3">
+                        <label for="anama" class="form-label">Nama Lengkap</label>
+                        <input type="text" class="form-control" id="anama" aria-describedby="emailHelp" name="nama" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="nim" class="form-label">NIM</label>
+                        <input type="text" class="form-control" id="nim" aria-describedby="emailHelp" name="nim" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email address</label>
+                        <input type="text" class="form-control" id="email" aria-describedby="emailHelp" name="email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="jurusan" class="form-label">Jurusan</label>
+                        <input type="text" class="form-control" id="jurusan" aria-describedby="emailHelp" name="jurusan" required>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <button type="submit" class="btn btn-primary" name="submit">Kirim</button>
+                            <a href="/" class="btn btn-secondary">Kembali</a>
+                        </div>
+                    </div>
+                </table>
+            </form>
+
+        </div>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
