--- a/views/form.html
+++ b/views/form.html
@@ -26,11 +26,11 @@
                     </div>
                     <div class="mb-3">
                         <label for="nim" class="form-label">NIM</label>
-                        <input type="text" class="form-control" id="nim" aria-describedby="emailHelp" name="nim" required>
+                        <input type="number" class="form-control" id="nim" aria-describedby="emailHelp" name="nim" required>
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label">Email address</label>
-                        <input type="text" class="form-control" id="email" aria-describedby="emailHelp" name="email" required>
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" required>
                     </div>
                     <div class="mb-3">
                         <label for="jurusan" class="form-label">Jurusan</label>
